# border-types

./: .gitignore  .merlin  Foo.elm  README.md  border-types.cabal  bsconfig.json  makefile  package.json  stack.yaml
__tests__/: DecodeSpec.re
installer/: index.js  package.json
lib/bs/: .bsbuild  .bsdeps  .ninja_log  BorderTypes.cmi  BorderTypes.cmj  BorderTypes.cmt  BorderTypes.js  BorderTypes.mlmap  build.ninja
lib/bs/__tests__/: DecodeSpec-BorderTypes.cmi  DecodeSpec-BorderTypes.cmj  DecodeSpec-BorderTypes.cmt  DecodeSpec.mlast  DecodeSpec.mlast.d
lib/bs/src/: CLI-BorderTypes.cmi  CLI-BorderTypes.cmj  CLI-BorderTypes.cmt  CLI.mlast  CLI.mlast.d  CommandLineArgs-BorderTypes.cmi  CommandLineArgs-BorderTypes.cmj  CommandLineArgs-BorderTypes.cmt  CommandLineArgs.mlast  CommandLineArgs.mlast.d  Decode-BorderTypes.cmi  Decode-BorderTypes.cmj  Decode-BorderTypes.cmt  Decode.mlast  Decode.mlast.d  Demo-BorderTypes.cmi  Demo-BorderTypes.cmj  Demo-BorderTypes.cmt  Demo.mlast  Demo.mlast.d  Main-BorderTypes.cmi  Main-BorderTypes.cmj  Main-BorderTypes.cmt  Main.mlast  Main.mlast.d  Misc-BorderTypes.cmi  Misc-BorderTypes.cmj  Misc-BorderTypes.cmt  Misc.mlast  Misc.mlast.d  Print-BorderTypes.cmi  Print-BorderTypes.cmj  Print-BorderTypes.cmt  Print.mlast  Print.mlast.d  Types-BorderTypes.cmi  Types-BorderTypes.cmj  Types-BorderTypes.cmt  Types.mlast  Types.mlast.d
lib/bs/src/Decode/: Primitive-BorderTypes.cmi  Primitive-BorderTypes.cmj  Primitive-BorderTypes.cmt  Primitive.mlast  Primitive.mlast.d
lib/js/__tests__/: DecodeSpec.bs.js
lib/js/src/: Decode.bs.js  Main.bs.js  Misc.bs.js  Print.bs.js  Types.bs.js
lib/js/src/Decode/: Primitive.bs.js
src/: Ast.hs  CLI.hs  Decode.re  Generate.hs  Main.bs.js  Main.hs  Main.re  Misc.hs  Misc.re  Parser.hs  Print.bs.js  Print.re  Types.hs  Types.re
src/Ast/: Parse.hs
src/Generate/: Elm.hs  Reason.hs
src/Parser/: CustomType.hs  LanguageConfig.hs  Misc.hs  PrimitiveType.hs  RootConfig.hs
test/: ParserSpec.hs  Test.hs  sample.json
test/AstSpec/: ParseSpec.hs
test/GenerateSpec/: ElmSpec.hs  ReasonSpec.hs
test/ParserSpec/: CustomTypeSpec.hs  LanguageConfigSpec.hs  PrimitiveTypeSpec.hs  RootConfigSpec.hs
