name:                border-types
version:             1.0.0
synopsis:            Generate types from Elm and host langauges
description:         CLI tool to generate types for multiple languages from a single config file
homepage:            https://github.com/jaredramirez/border-types#readme
license:             BSD3
license-file:        LICENSE
author:              Jared Ramirez
maintainer:          jaredramirez@me.com
copyright:           2018 Jared Ramirez
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable border-types
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text >= 1.2.3.0 && < 1.3.0.0
                     , unordered-containers >= 0.2.9.0 && < 0.3.0.0
                     , aeson >= 1.3.0.0 && < 1.4
                     , aeson-better-errors >= 0.9.1.0 && < 1.0.0.0
                     , bytestring >= 0.10.8.2 && < 0.11.0.0
                     , vector >= 0.12.0.1 && < 0.13.0.0
                     , turtle >= 1.5.7 && < 1.6.0
                     , optparse-applicative >= 0.14.2.0 && < 0.15.0.0
                     , directory >= 1.3.2.2 && < 1.4.0.0
                     , transformers >= 0.5.5.0 && < 0.6.0.0
  other-modules:       Types
                     , CLI
                     , Parser.PrimitiveType
                     , Parser.CustomType
                     , Parser.LanguageConfig
                     , Parser.RootConfig
                     , Parser.Misc
                     , Generate
                     , Generate.Reason
                     , Generate.Elm
                     , Misc
                     , Paths_border_types

-- FOR TESTING
library 
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text >= 1.2.3.0 && < 1.3.0.0
                     , unordered-containers >= 0.2.9.0 && < 0.3.0.0
                     , aeson >= 1.3.0.0 && < 1.4
                     , aeson-better-errors >= 0.9.1.0 && < 1.0.0.0
                     , bytestring >= 0.10.8.2 && < 0.11.0.0
                     , vector >= 0.12.0.1 && < 0.13.0.0
                     , turtle >= 1.5.7 && < 1.6.0
                     , optparse-applicative >= 0.14.2.0 && < 0.15.0.0
                     , directory >= 1.3.2.2 && < 1.4.0.0
                     , transformers >= 0.5.5.0 && < 0.6.0.0
  exposed-modules:     Types
                     , CLI
                     , Parser.PrimitiveType
                     , Parser.CustomType
                     , Parser.LanguageConfig
                     , Parser.RootConfig
                     , Parser.Misc
                     , Generate
                     , Generate.Reason
                     , Generate.Elm
                     , Misc
                     , Paths_border_types

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs 
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , hspec >= 2.5.0 && < 3.0.0
                     , hspec-discover >= 2.5.0 && < 3.0.0
                     , text >= 1.2.3.0 && < 1.3.0.0
                     , unordered-containers >= 0.2.9.0 && < 0.3.0.0
                     , aeson >= 1.3.0.0 && < 1.4
                     , aeson-better-errors >= 0.9.1.0 && < 1.0.0.0
                     , bytestring >= 0.10.8.2 && < 0.11.0.0
                     , border-types
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       ParserSpec.PrimitiveTypeSpec
                     , ParserSpec.CustomTypeSpec
                     , ParserSpec.LanguageConfigSpec
                     , ParserSpec.RootConfigSpec
                     , GenerateSpec.ReasonSpec
                     , GenerateSpec.ElmSpec

source-repository head
  type:     git
  location: https://github.com/jaredramirez/border-types
